<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen">
    <ImageButton
        android:id="@+id/ibSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/setting_select"/>

    <RelativeLayout
        android:id="@+id/rlProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone">
        <TextView
            android:id="@+id/tvProgressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <ProgressBar
        android:id="@+id/pbStatus"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/status"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/circular"
        android:secondaryProgress="100"
        android:max="100"/>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rlStartSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        >
        <ImageButton
            android:id="@+id/ibStartSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_start_select"
            android:src="@drawable/btn_start_bg"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_test"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="16pt"
            android:textColor="@color/gray"/>
    </RelativeLayout>
    <com.work.speedtest_overhead.wiget.SpeedView
        android:id="@+id/svSpeedDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rlStartSpeed"
        android:layout_centerHorizontal="true"/>
    <TableLayout
        android:id="@+id/tlInterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/svSpeedDisplay"
        android:visibility="gone">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/lte"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/wifi"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/unit"/>
            <TextView
                android:id="@+id/tvWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/unit"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/tlInterface"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible">
        <RelativeLayout
            android:id="@+id/rlSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/red"
            android:visibility="gone">
            <TextView
                android:id="@+id/tvTitleSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/download"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitleSpeed">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/max"/>
                    <TextView
                        android:id="@+id/tvMaxResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="36sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/unit"/>

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/avg"/>
                    <TextView
                        android:id="@+id/tvAvgResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="36sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/unit"/>

                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
